--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "jsonwebtoken": "^9.0.0",
-    "md5": "^2.3.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "next": "13.2.4",
     "next-connect": "^0.13.0",
+    "nextjs": "^0.0.3",
     "nextjs-cors": "^2.1.2",
+    "node": "^19.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
